boosting classifier, current best sub

--- a/rp_exploration_baseline_model.ipynb
+++ b/rp_exploration_baseline_model.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n"
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,6 +774,49 @@
    "outputs": [],
    "source": [
     "test[['building_id', 'damage_grade']].to_csv(\"rf_dropped_low_importance.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_pipe = Pipeline([('scaler', StandardScaler()), \n",
+    "                     ('knn', KNeighborsClassifier(metric = 'manhattan', \n",
+    "                                                  n_neighbors = 13, \n",
+    "                                                  weights = 'distance'))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.6727039  0.67075979 0.6778396  0.67657329 0.67695702]\n",
+      "Mean Accuracy : 0.674967\n"
+     ]
+    }
+   ],
+   "source": [
+    "cvs = cross_val_score(knn_pipe, rf_test, rf_vals, scoring = make_scorer(f1_score, average='micro'), cv = 5)\n",
+    "print(cvs)\n",
+    "print('Mean Accuracy : {}'.format(np.mean(cvs).round(6)))\n"
    ]
   },
   {
