current best model .7457 (top 5%)

--- a/XGB_main_api.ipynb
+++ b/XGB_main_api.ipynb
@@ -13,14 +13,14 @@
     "from sklearn.metrics import f1_score, make_scorer\n",
     "import xgboost as xgb\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
+    "#from bayes_opt import BayesianOptimization\n",
     "\n",
     "#from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
     "import category_encoders as ce\n",
     "\n",
-    "from imblearn.combine import SMOTETomek"
+    "#from imblearn.combine import SMOTETomek"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,19 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "xgb_params = {'objective': 'multi:softmax',\n",
-    " 'gamma': 0.001369048068388758,\n",
-    " 'eta': 0.11,\n",
-    " 'max_depth': 15,\n",
-    " 'min_child_weight': 9,\n",
-    " 'num_class' : 4,\n",
-    " 'subsample' : .85,\n",
-    " 'colsample_bytree' : .9\n",
-    " }"
+    "              'gamma': 0.001369048068388758,\n",
+    "              'eta': 0.11,\n",
+    "              'max_depth': 20,\n",
+    "              'min_child_weight': 9,\n",
+    "              'num_class' : 4,\n",
+    "              'subsample' : .85,\n",
+    "              'colsample_bytree' : .9,\n",
+    "              'seed':23456\n",
+    " }\n"
    ]
   },
   {
@@ -118,53 +119,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def f1_eval(y_pred, dtrain):\n",
-    "    y_true = dtrain.get_label()\n",
-    "    print(np.argmax(np.round(y_pred)))\n",
-    "    err = 1-f1_score(y_true, np.round(y_pred), average = 'micro')\n",
-    "    return 'f1_err', err"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_results = xgb.cv(xgb_params,\n",
-    "                    dtrain_full,\n",
-    "                    num_boost_round = 999,\n",
-    "                    seed = 234,\n",
-    "                    folds = skf,\n",
-    "                    early_stopping_rounds = 10,\n",
-    "                    feval = f1_eval\n",
-    "                    )\n",
-    "print(cv_results)\n",
-    "print(1 - cv_results['test-merror-mean'].min())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "94\n",
-      "133\n",
-      "99\n",
-      "118\n",
-      "124\n"
-     ]
-    }
-   ],
    "source": [
     "f1_scores = []\n",
     "boost_rounds = []\n",
+    "\n",
     "for train_idx, test_idx in skf.split(train_values, train_labels.damage_grade):\n",
+    "    \n",
+    "    #smote = SMOTETomek(sampling_strategy = {1 : 30000}, random_state = 23456)\n",
+    "    #X, y = smote.fit_resample(train_values.iloc[train_idx], train_labels.iloc[train_idx, 1])\n",
+    "    \n",
+    "    #dtrain = xgb.DMatrix(X, y)\n",
     "    dtrain = dtrain_full.slice(train_idx)\n",
     "    dtest  = dtrain_full.slice(test_idx)\n",
     "    \n",
@@ -177,69 +141,169 @@
     "                  )\n",
     "    boost_rounds.append(model.best_iteration + 1)\n",
     "    print(\"Boost Rounds: {}\".format(model.best_iteration + 1))\n",
+    "    boost_round = model.best_iteration + 1\n",
     "    \n",
-    "    preds = model.predict(dtest)\n",
+    "    best_model = xgb.train(xgb_params,\n",
+    "                      dtrain,\n",
+    "                      num_boost_round = boost_round,\n",
+    "                      #evals = [(dtest, 'test_set')],\n",
+    "                      #early_stopping_rounds = 10,\n",
+    "                      verbose_eval = False\n",
+    "                  ) \n",
+    "    preds = best_model.predict(dtest)\n",
     "    \n",
+    "    print('F1: {}'.format(f1_score(dtest.get_label(), preds, average = 'micro')))\n",
     "    f1_scores.append(f1_score(dtest.get_label(), preds, average = 'micro'))\n",
     "\n",
     "print(f1_scores)\n",
     "print(\"Mean F1: {}\".format(np.mean(f1_scores)))\n",
-    "print(\"Mean Boost Rounds: {}\".format(np.mean(boost_rounds)))"
+    "print(\"Mean Boost Rounds: {}\".format(np.mean(boost_rounds)))\n",
+    "# score to beat\n",
+    "#Mean F1: 0.743968746612887"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.7444791926478771, 0.7457981580966999, 0.7474865694551035, 0.7425748273215657, 0.744071373752878]\n",
-      "0.7448820242548249\n",
-      "113.6\n"
-     ]
-    }
-   ],
    "source": [
-    "print(f1_scores)\n",
-    "print(np.mean(f1_scores))\n",
-    "print(np.mean([94, 133, 99, 118, 124]))"
+    "Mean F1: 0.7451467927006086\n",
+    "Mean Boost Rounds: 113.8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "best_model = xgb.train(xgb_params, dtrain_full, num_boost_round = 114)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "damage_grade\n",
-      "2    56282\n",
-      "3    24302\n",
-      "1     6284\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
    "source": [
     "test = pd.read_csv('test_values.csv')\n",
     "mtest = test.drop(drop_vars, axis = 1)\n",
     "mtest = targ_enc.transform(mtest)\n",
     "mtest = pd.DataFrame(imp.transform(mtest), columns = mtest.columns)\n",
     "dtest = xgb.DMatrix(mtest)\n",
+    "\n",
+    "votes_df = pd.DataFrame(test.iloc[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seeds = [23456, 45678, 56789, 12345, 98765, 87654, 76543, 54321, 13579, 246801, 57911, 791113]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training model 1\n",
+      "Training model 2\n",
+      "Training model 3\n",
+      "Training model 4\n",
+      "Training model 5\n",
+      "Training model 6\n",
+      "Training model 7\n",
+      "Training model 8\n",
+      "Training model 9\n",
+      "Training model 10\n",
+      "Training model 11\n",
+      "Training model 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, seed in enumerate(seeds):\n",
+    "    print(\"Training model {}\".format(idx + 1))\n",
+    "    \n",
+    "    xgb_params = {'objective': 'multi:softmax',\n",
+    "                  'gamma': 0.001369048068388758,\n",
+    "                  'eta': 0.11,\n",
+    "                  'max_depth': 20,\n",
+    "                  'min_child_weight': 9,\n",
+    "                  'num_class' : 4,\n",
+    "                  'subsample' : .85,\n",
+    "                  'colsample_bytree' : .9,\n",
+    "                  'seed': seed\n",
+    "                 }\n",
+    "    \n",
+    "    boost_rounds = []\n",
+    "    \n",
+    "    for train_idx, test_idx in skf.split(train_values, train_labels.damage_grade):\n",
+    "            dtrain = dtrain_full.slice(train_idx)\n",
+    "            dtest_part  = dtrain_full.slice(test_idx)\n",
+    "            \n",
+    "            model = xgb.train(xgb_params,\n",
+    "                              dtrain,\n",
+    "                              num_boost_round = 999,\n",
+    "                              evals = [(dtest_part, 'test_set')],\n",
+    "                              early_stopping_rounds = 10,\n",
+    "                              verbose_eval = False\n",
+    "                          )\n",
+    "            \n",
+    "            boost_rounds.append(model.best_iteration + 1)\n",
+    "    \n",
+    "    best_model = xgb.train(xgb_params,\n",
+    "                           dtrain_full,\n",
+    "                           num_boost_round = np.round(np.mean(boost_rounds)).astype(int),\n",
+    "                           verbose_eval = False\n",
+    "                           ) \n",
+    "    \n",
+    "    col_nam = [\"model\", str(idx + 1)]\n",
+    "    col_nam = \"_\".join(col_nam)\n",
+    "    \n",
+    "    votes_df[col_nam] = best_model.predict(dtest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "votes_df['damage_grade'] = votes_df.mode(axis = 1).iloc[:, 0].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "votes_df[\"damage_grade\"] = votes_df[\"damage_grade\"].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "votes_df[['building_id', 'damage_grade']].to_csv(\"voting_xgboost_model.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = xgb.train(xgb_params, dtrain_full, num_boost_round = np.round(np.mean(boost_rounds)).astype(int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "test[\"damage_grade\"] = best_model.predict(dtest)\n",
     "test[\"damage_grade\"] = test[\"damage_grade\"].astype(int)\n",
@@ -248,12 +312,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test[['building_id', 'damage_grade']].to_csv(\"xgb_model.csv\", index = False)"
+    "test[['building_id', 'damage_grade']].to_csv(\"xgb_model_max_depth_20.csv\", index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04944899689177734"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "175/3539"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
